<resources>
    <string name="app_name">Vaaya</string>
    <string name="vaaya_logo_cd">Vaaya Logo</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vaaya</string>
    <string name="nav_header_subtitle">Vaaya, Inc. </string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_home">Vaaya</string>
    <string name="title_activity_about">About</string>

    <string name="vaaya_nav_stats_title">Check Progress</string>
    <string name="vaaya_nav_calendar_title">Past &amp; Today</string>
    <string name="vaaya_nav_suggestions_title">Form new Habits</string>
    <string name="vaaya_nav_help_title">Help, Get Help</string>
    <string name="vaaya_nav_settings_title">Settings</string>
    <string name="vaaya_nav_logout_title">Logout</string>
    <string name="vaaya_nav_about">About</string>

    <string name="vaaya_login_btn_text">Login</string>
    <string name="vaaya_login_password_hint">Password</string>
    <string name="vaaya_login_email_hint">Email</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
