<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vaaya_login_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/vaaya_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/vaaya_form_vertical_margin"
        android:layout_marginStart="@dimen/vaaya_form_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/vaaya_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/va_logo_slim_trans"
        android:contentDescription="@string/vaaya_logo_cd" />

    <EditText
        android:id="@+id/vaaya_login_email"
        android:layout_width="@dimen/sans_all"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/vaaya_form_vertical_margin"
        android:layout_marginStart="@dimen/vaaya_form_vertical_margin"
        android:layout_marginTop="@dimen/vaaya_form_input_spacing"
        android:background="@android:color/white"
        android:hint="@string/vaaya_login_email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/vaaya_form_input_padding"
        android:singleLine="true"
        android:textColor="@color/inputLogin"
        android:textColorHint="@color/inputLoginHint"
        app:layout_constraintBottom_toTopOf="@+id/vaaya_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vaaya_login_logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/vaaya_login_password"
        android:layout_width="@dimen/sans_all"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/vaaya_form_vertical_margin"
        android:layout_marginStart="@dimen/vaaya_form_vertical_margin"
        android:layout_marginTop="@dimen/vaaya_form_input_spacing"
        android:background="@android:color/white"
        android:hint="@string/vaaya_login_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/vaaya_form_input_padding"
        android:singleLine="true"
        android:textColor="@color/inputLogin"
        android:textColorHint="@color/inputLoginHint"
        app:layout_constraintBottom_toTopOf="@+id/vaaya_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaaya_login_email"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/vaaya_login_btn"
        android:layout_width="@dimen/sans_all"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/vaaya_form_vertical_margin"
        android:layout_marginStart="@dimen/vaaya_form_vertical_margin"
        android:layout_marginTop="@dimen/vaaya_form_btn_spacing"
        android:background="@color/btn_login_bg"
        android:text="@string/vaaya_login_btn_text"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaaya_login_password" />

</android.support.constraint.ConstraintLayout>